--- a/src/app/shared/component/card/card.component.scss
+++ b/src/app/shared/component/card/card.component.scss
@@ -1,26 +1,122 @@
+@import '../../../../styles.scss';
+
 .card {
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
+    width: 250px;
+    height: 350px;
     overflow: hidden;
-    width: 350px;
-    margin: 0 auto;
-    height: 50vh;
+    margin: 200px auto;
 
-    .header {
-        box-shadow: 0 3px 4px -1px rgba(0, 0, 0, 0.1);
-        font-size: 10px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+    .card-image {
+        height: 60%;
+        position: relative;
+
+        div {
+            width: 100%;
+            height: 100%;
+            background-size: contain;
+            background-position: center;
+        }
+
+        .card-image-swapper {
+            position: absolute;
+            height: 10%;
+            @include verticalCenter();
+            justify-content: space-between;
+            padding: 10px;
+            top: 10px;
+
+            button[btnIcon] {
+                @include iconButton();
+                @include clickBehaviour();
+                color: $AccentColor;
+                background-color: transparent;
+                // mat-icon {}
+            }
+
+            button {
+                @include iconButton();
+                @include clickBehaviour();
+                background-color: $AccentColor;
+                font-size: $fontSizeCaption;
+                color: $groundColor;
+                border-radius: 10px;
+                padding: 4px 10px;
+
+            }
+        }
+
     }
 
-    .body {
-        height: 75%;
-        padding: 5px;
+    .card-body {
+        padding: 5px 8px;
+        height: 40%;
+        background-color: $groundColor;
 
+        .product-title {
+            @include stripper();
+            font-size: $fontSizeTitle;
+            font-weight: 200;
+        }
+
+        .rating {
+            mat-icon {
+                color: $startOn;
+
+                &:last-child {
+
+                    color: $startOff;
+                }
+            }
+        }
+
+        .price {
+            .discount {
+                color: $primaryColor;
+                font-weight: 300;
+            }
+
+            .fixed-price {
+                font-weight: 500;
+                color: $AccentColor;
+            }
+        }
+
+        .shopping {
+            margin-bottom: 5px;
+            @include verticalCenter();
+            justify-content: space-between;
+
+            button[addToShoppingCart] {
+                @include iconButton();
+                @include verticalCenter();
+                background-color: $primaryColor;
+                color: $groundColor;
+                padding: 4px 10px;
+                font-size: $fontSizeCaption;
+            }
+
+            div[product-action] {
+                flex-grow: 1;
+                @include verticalCenter();
+                justify-content: space-around;
+
+                mat-icon {
+                    &[share] {
+                        color: $dividerGray;
+                    }
+
+                    &[favorite] {
+                        color: tomato;
+                    }
+
+                    &[unFavorite] {
+                        color: $startOff;
+                    }
+                }
+            }
+        }
     }
 
-    .footer {
-        // height: ;
-    }
 }
