--- a/src/app/shared/component/product-shopping-action/product-shopping-action.component.scss
+++ b/src/app/shared/component/product-shopping-action/product-shopping-action.component.scss
@@ -50,3 +50,20 @@
         }
     }
 }
+.lastView{
+    button[addToShoppingCart] {
+        @include iconButton();
+        padding: 0;
+        mat-icon{
+            color: $AccentColor;
+            margin: 0;
+        }
+
+        &:disabled{
+            background-color: transparent;
+            mat-icon{
+                color: $seconderyColor;
+            }
+        }
+    }
+}
