--- a/src/app/core/component/home/home.component.scss
+++ b/src/app/core/component/home/home.component.scss
@@ -21,3 +21,58 @@
         color: $groundColor;
     }
 }
+
+section[productList] {
+    .container {
+        @include verticalCenter();
+        align-items: flex-start;
+        flex-wrap: nowrap;
+        justify-content: center;
+    }
+
+    div[newProduct] {
+        @include verticalCenter();
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 12px;
+        flex-grow: 1;
+
+    }
+
+    div[lastView] {
+        @include verticalCenter();
+        flex-wrap: wrap;
+        max-width: 300px;
+        justify-content: center;
+        gap: 5px;
+    }
+
+    div[divider] {
+        margin: 25px auto;
+        width: 100%;
+        height: 35px;
+        @include verticalCenter();
+        justify-content: space-between;
+        &.lasView{
+            justify-content: center;
+        }
+        P {
+            @include stripper();
+            font-size: $fontSizeTitle;
+            
+        }
+
+        span[dividerLine] {
+            height: 2px;
+            flex-grow: 1;
+            margin: auto 10px;
+            background-color: $dividerGray;
+        }
+
+        button {
+            font-size: $fontSizeTitle;
+            color: $primaryColor;
+            border-color: $primaryColor;
+        }
+    }
+}
