--- a/src/app/shared/component/card/card.component.scss
+++ b/src/app/shared/component/card/card.component.scss
@@ -3,36 +3,33 @@
 .card {
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
-    width: 250px;
-    height: 350px;
+    width: 240px;
+    height: 390px;
     overflow: hidden;
-    margin: 200px auto;
+
+    overflow: hidden;
 
     .card-image {
         height: 60%;
+        width: 100%;
         position: relative;
-
-        div {
-            width: 100%;
-            height: 100%;
-            background-size: contain;
-            background-position: center;
-        }
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center top;
 
         .card-image-swapper {
             position: absolute;
-            height: 10%;
             @include verticalCenter();
             justify-content: space-between;
             padding: 10px;
+            height: 10px !important;
+            width: 100%;
             top: 10px;
 
-            button[btnIcon] {
+            button[swap] {
                 @include iconButton();
                 @include clickBehaviour();
                 color: $AccentColor;
-                background-color: transparent;
-                // mat-icon {}
             }
 
             button {
@@ -41,26 +38,31 @@
                 background-color: $AccentColor;
                 font-size: $fontSizeCaption;
                 color: $groundColor;
-                border-radius: 10px;
+                border-radius: 12px;
                 padding: 4px 10px;
 
             }
         }
-
     }
 
     .card-body {
-        padding: 5px 8px;
+        background-color: blue;
+        padding: 5px ;
         height: 40%;
         background-color: $groundColor;
+        @include verticalCenter();
+        flex-wrap: wrap;
 
+        * {
+            width: 100%;
+        }
         .product-title {
             @include stripper();
             font-size: $fontSizeTitle;
             font-weight: 200;
         }
 
-       
+
 
         .price {
             .discount {
@@ -77,4 +79,42 @@
 
     }
 
+}
+
+.lastView {
+    @include verticalCenter();
+    flex-wrap: wrap;
+    height: 127px;
+    width: 260px;
+    *{
+        font-size: $fontSizeCaption !important;
+    }
+
+    // width: 300px;
+    .card-image {
+        height: 100%;
+        width: 40%;
+        background-position: center center;
+
+        .card-image-swapper {
+            padding: 8px 1px;
+        }
+    }
+
+    .card-body {
+        height: 100%;
+        width: 60%;
+
+    }
+}
+
+@media only screen and (max-width: 1099px) {
+
+    .lastView {
+        width: 245px;
+    }
+
+    .card {
+        width: 220px;
+    }
 }
