--- a/src/app/shared/component/product-shopping-action/product-shopping-action.component.html
+++ b/src/app/shared/component/product-shopping-action/product-shopping-action.component.html
@@ -1,14 +1,15 @@
-<div class="shopping">
+<div class="shopping" [class.lastView]="isLastView">
     <button addToShoppingCart (click)="addToCart()" [disabled]="isAdd">
         <!-- if product is add to cart  -->
+
         <ng-container *ngIf="isAdd">
             <mat-icon>add_reaction_outline</mat-icon>
-            <span>تم الاضافه بنجاح</span>
+            <span *ngIf="!isLastView">تم الاضافه بنجاح</span>
         </ng-container>
         <!-- if product not exist in cart -->
         <ng-container *ngIf="!isAdd">
             <mat-icon>add_shopping_cart</mat-icon>
-            <span>اضف الي السلة</span>
+            <span *ngIf="!isLastView">اضف الي السلة</span>
         </ng-container>
 
     </button>
