--- a/src/app/shared/component/card/card.component.scss
+++ b/src/app/shared/component/card/card.component.scss
@@ -87,7 +87,7 @@
 .lastView {
     @include verticalCenter();
     flex-wrap: wrap;
-    height: 127px;
+    height: 121px;
     width: 260px;
 
     * {
@@ -120,5 +120,10 @@
 
     .card {
         width: 220px;
+    }
+}
+@media only screen and (max-width: 1015px ) and (min-width: 900px ){
+    .card {
+        width: 210px;
     }
 }
