--- a/src/app/core/component/home/home.component.scss
+++ b/src/app/core/component/home/home.component.scss
@@ -11,24 +11,53 @@
 .caption {
     height: 50vh;
     width: 100%;
-    background-image: url('../../../../assets/background-image.png');
-    background-size: cover;
-    background-position: center center;
-    @include verticalCenter();
-}
+    overflow: hidden;
+    position: relative;
+
+    .bgImgCaption {
+        height: 100%;
+        width: 100%;
+        background-image: url('../../../../assets/background-image.png');
+        background-size: cover;
+        background-position: center center;
+    }
+    .bgImgCaption1 {
+        position: absolute;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        background-image: url('../../../../assets/background-image.png');
+        background-size: cover;
+        background-position: center center;
+    }
+
+    .icon {
+        position: absolute;
+        @include verticalCenter();
+        justify-content: space-between;
+        width: 100%;
+        height: 100%;
+        top: 0;
 
 
-.icon {
-    @include verticalCenter();
-    justify-content: space-between;
-    width: 100%;
-    height: 40px;
+        button {
+            @include iconButton;
+            @include verticalCenter();
+            color: $groundColor;
+            background-color: rgba($color: #fff, $alpha: .3);
+            padding: 15px 9px;
+            margin: 3px;
 
-    button {
-        @include iconButton;
-        color: $groundColor;
+            mat-icon {
+                font-size: 12px;
+                height: fit-content;
+            }
+        }
     }
 }
+
+
+
 
 section[productList] {
     overflow: hidden;
@@ -68,18 +97,18 @@ section[productList] {
 
         P {
             @include stripper();
-            font-size: $fontSizeTitle;
+            font-size: $fontSizeBodyText;
         }
 
         span[dividerLine] {
-            height: 2px;
+            height: 1px;
             flex-grow: 1;
             margin: auto 10px;
             background-color: $dividerGray;
         }
 
         button {
-            font-size: $fontSizeTitle;
+            font-size: $fontSizeBodyText;
             color: $primaryColor;
             border-color: $primaryColor;
         }
@@ -111,8 +140,6 @@ section[productList] {
 
 div[swap] {
     @include productListGrid();
-
-
 }
 
 @media only screen and (max-width: 1015px) and (min-width: 900px) {
