--- a/src/app/core/component/navbar/navbar.component.html
+++ b/src/app/core/component/navbar/navbar.component.html
@@ -53,7 +53,7 @@
                 </a>
             </li>
             <li class="item-list">
-                <a class="item-link" routerLink="" mat-button>الرئيسة</a>
+                <a class="item-link" routerLink="/" mat-button>الرئيسة</a>
             </li>
             <li class="item-list">
                 <a class="item-link" routerLink="" mat-button>قائمة الأمنيات</a>
