--- a/src/app/core/component/slide-nav/slide-nav.component.html
+++ b/src/app/core/component/slide-nav/slide-nav.component.html
@@ -1,18 +1,16 @@
-<!-- [ngClass]="open?'open':'close'" -->
-<!-- *ngIf="open" -->
-<nav sidbarOverlay (window:scroll)="stopScrolling()" [@slideInOut]="open ? 'in' : 'out'">
 
-    <div class="container" slideBar>
+<nav (click)="scope($event)" sidbarOverlay [@slideInOut]="open ? 'in' : 'out'">
+
+    <div class="container" slideBar #slideBar>
         <button mat-icon-button class="close-btn" (click)="close()">
             <mat-icon class="close">close</mat-icon>
         </button>
-        
+
         <!-- nav item row  -->
         <div class="row" itemList>
             <div id="items-nav">
-                
                 <mat-toolbar>
-                    
+
                     <li class="item-list">
                         <a class="item-link" routerLink="" [matMenuTriggerFor]="menu" mat-button>
                             <mat-icon>keyboard_arrow_down</mat-icon>
@@ -23,15 +21,15 @@
                     <li class="item-list">
                         <a class="item-link" routerLink="" mat-button>الرئيسة</a>
                     </li>
-                    
+
                     <li class="item-list">
                         <a class="item-link" routerLink="" mat-button>قائمة الأمنيات</a>
                     </li>
-                    
+
                     <li class="item-list">
                         <a class="item-link" routerLink="" mat-button>تواصل معنا</a>
                     </li>
-                    
+
                     <li class="item-list">
                         <a class="item-link" routerLink="" mat-button>من نحن</a>
                     </li>
@@ -46,9 +44,8 @@
                         <button class="menuItem" mat-menu-item routerLinkActive="activeLink" routerLink="">depart
                         </button>
                     </mat-menu>
-                    
-                </mat-toolbar>
 
+                </mat-toolbar>
             </div>
         </div>
     </div>
