refactor in cdk layout implementaion throw subscripe on in app componenet and pass small mode into child as input depond on which element will need it

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<navbar></navbar>
-<home></home>
+<navbar  [smallSize]="isSmallSize"></navbar>
+<router-outlet >
+    <home [smallSize]="isSmallSize"></home>
+</router-outlet>
